--- a/.gitignore
+++ b/.gitignore
@@ -3247,3 +3247,4 @@
 /pkg/mod/github.com/rs/zerolog@v0.0.0-20190811050349-61d174912467/syslog_test.go
 /pkg/mod/github.com/rs/zerolog@v0.0.0-20190811050349-61d174912467/writer.go
 /pkg/mod/github.com/rs/zerolog@v0.0.0-20190811050349-61d174912467/writer_test.go
+/.scannerwork/
