--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -3,14 +3,14 @@ version: '2'
 services:
 # Start messaging broker
   rabbitmq:
-    image: rabbitmq:3.6.5-management
+    image: library/rabbitmq:3.8.8-management-alpine
+
     ports:
       - "5672:5672"
       - "15672:15672" #Management Server
     environment:
       RABBITMQ_DEFAULT_USER: "admin"
       RABBITMQ_DEFAULT_PASS: "Phaish9ohbaidei6oole"
-
   # Start transformation worker
   strokewidthtransform:
     image: tleyden5iwx/open-ocr-preprocessor
