--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -7,3 +7,7 @@ test_patterns = [
 [[analyzers]]
 name = "go"
 enabled = true
+
+
+    [analyzers.meta]
+    import_paths = ["github.com/xf0e/open-ocr"]
